# narcissus

./: Cargo.toml  build.rs
src/: errors.rs  ltsv.rs  main.rs  narcissus.rs  webcam.rs
src/exchange/: confchannel.rs  mod.rs  msgs.rs  normalize_integral_image.c
src/server/: mod.rs  mod.rs~  server.rs  session.rs
src/videoq/: mod.rs  videoq.c
